Fix category filter bottom spacing

--- a/app/styles/pages/_media-browse.scss
+++ b/app/styles/pages/_media-browse.scss
@@ -243,6 +243,10 @@
     padding: 10px;
     padding-bottom: 15px;
     padding-top: 0;
+    &:last-child {
+      margin-bottom: 0;
+      border-bottom: none;
+    }
     ul {
       list-style-type: none;
       padding: 0;
